# PlanTo

./: .gitignore  pyproject.toml
planto/authentication/: backends.py  managers.py  models.py  renderers.py  serializers.py  urls.py  views.py
planto/authentication/migrations/: 0001_initial.py
planto/job_announcement/: apps.py  models.py  serializers.py  urls.py  views.py
planto/job_announcement/migrations/: 0001_initial.py  0002_alter_job_salary.py
planto/job_announcement/saramin/: api_access.py
planto/planto/: asgi.py  settings.py  urls.py  wsgi.py
planto/todo/: admin.py  models.py  serializers.py  urls.py  views.py
planto/todo/migrations/: 0001_initial.py  0002_alter_task_due_date.py  0003_alter_task_due_date.py
