[tool.poetry]
name = "planto-project"
version = "0.1.0"
description = ""
authors = ["desfox <desfox99@naver.com>"]
readme = "README.md"
packages = [{include = "planto_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
