[tool.poetry]
name = "planto-project"
version = "0.1.0"
description = ""
authors = ["desfox <desfox99@naver.com>"]
readme = "README.md"
packages = [{include = "planto_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
mypy = "^1.4.1"
django-filter = "^23.2"
django-extensions = "^3.2.3"
drf-spectacular = "^0.26.3"
pyjwt = "^2.7.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
